# FireDetection

./: CMakeLists.txt  FireDetection.sln  README.md  main.cpp
FireDetection/: CovarianceFireDetection.cpp  CovarianceFireDetection.h  FireDetection.vcxproj  FireDetection.vcxproj.filters  FlowRateFireDetection.cpp  FlowRateFireDetection.h  RChannelFireDetection.cpp  RChannelFireDetection.h  TrainedColorFireDetection.cpp  TrainedColorFireDetection.h  UnitedFireDetection.cpp  UnitedFireDetection.h  _Common.h  main.cpp
FireDetection/VideoSamples/: test3.avi  test5.avi
cmake/: add-libraries-linux.cmake  add-libraries-windows.cmake  target-link-libraries-linux.cmake  target-link-libraries-windows.cmake
include/: CovarianceFireDetection.h  FlowRateFireDetection.h  RChannelFireDetection.h  TrainedColorFireDetection.h  UnitedFireDetection.h  _Common.h
source/: CovarianceFireDetection.cpp  FlowRateFireDetection.cpp  RChannelFireDetection.cpp  TrainedColorFireDetection.cpp  UnitedFireDetection.cpp
